--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,10 +1,11 @@
-<h1>Listing books</h1>
+<% provide(:title, '蔵書一覧') %>
+<h1>蔵書一覧</h1>
 
 <table>
   <thead>
     <tr>
-      <th>Title</th>
-      <th>Author name</th>
+      <th>タイトル</th>
+      <th>著者名</th>
       <th colspan="3"></th>
     </tr>
   </thead>
