--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,38 +1,54 @@
 <% provide(:title, '蔵書一覧') %>
 <h1>蔵書一覧</h1>
 
-<%= will_paginate @books%>
+<%= form_tag(books_search_path, method: "get", id: "search_window", class: "search") do %>
+	<%= text_field_tag :search_string, "", :placeholder => "タイトルを入力", :class => "text-box", :maxlength => 50 %>
+  <%= submit_tag "検索", :id => "search_button", :class => "btn", :name => nil %>
+<% end %>
+<div id="button_set">
+  <div id="add-book-dialog-form" title=<%= t 'books.btn_name.add' %>>
+    <p class="validateTips">書籍タイトルと著者名を入力してください。</p>
+    <%= form_tag(books_path, method: "post", id: "add_book", name: "book_data") do %>
+      <%= t 'books.form_label.title' %>	<%= text_field_tag 'book[title]', "", :maxlength => 50 %><br />
+      <%= t "books.form_label.author_name" %> <%= text_field_tag 'book[author_name]', "", :maxlength => 30 %>
+    <% end %>	
+  </div>
+  <button id="add_book_button" class="btn btn-primary"><%= t 'books.btn_name.add' %></button>
+
+  <%= form_tag(edit_book_path(1), method: "get", id: "show_book") do %>
+    <%= submit_tag (t "books.btn_name.show"), :id => "show_book_button", :class => "btn btn-primary", :name => nil, :disabled => true %>
+  <% end %>
+
+  <div id="delete-dialog-confirm" title=<%= t 'books.btn_name.delete' %>>
+	  <p>
+		  <span class="ui-icon ui-icon-alert"></span>
+		  本当に削除してよろしいですか？	
+		  <%= form_tag(book_path(1), method: "delete", id: "delete_book") do %>
+		  <% end %>
+	  </p>
+  </div>
+  <button id="delete_book_button" class="btn btn-primary" disabled><%= t 'books.btn_name.delete' %></button>
+</div>
 
 <table>
   <thead>
     <tr>
+			<th class="selector">書籍の選択</th>
       <th>タイトル</th>
       <th>著者名</th>
-      <th colspan="3"></th>
     </tr>
   </thead>
 
   <tbody>
     <% @books.each do |book| %>
       <tr>
+				<td class="selector"><input type="radio" name="book_select" book_id="<%= book.id %>" lending_id=<%= book.lending.id if book.lending.present? %>  /></td>
         <td><%= book.title %></td>
         <td><%= book.author_name %></td>
-        <td><%= link_to 'Show', book %></td>
-        <td><%= link_to 'Edit', edit_book_path(book) %></td>
-        <td><%= link_to 'Destroy', book, method: :delete, data: {confirm: 'Are you sure?'} %></td>
-				<td><%= link_to 'Lending', new_book_lending_path(book) %></td>
-				<% if book.lending.present? %>
-					<td><%= link_to 'Return', book_lending_path(book, book.lending), method: :delete, data: {confirm: 'Are you sure?'} %></td>
-				<% end %>
       </tr>
     <% end %>
   </tbody>
 </table>
 
-<%= will_paginate %>
+<center><%= will_paginate @books %></center>
 
-<br>
-
-<%= link_to 'New Book', new_book_path, target: "_blank" %>
-<br>
-<%= link_to 'Lendings', lendings_path, target: "_blank" %>
