--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -50,5 +50,7 @@
   </tbody>
 </table>
 
-<center><%= will_paginate @books %></center>
+<div class="books_pagination">
+	<%= will_paginate @books %>
+</div>
 
