--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,6 +1,6 @@
 <header class="navbar navbar-fixed-top navbar-inverse">
-	<div class="navbar-inner">
-		<div class="container">
+	<div class="header_menu">
+		<div>
 			<%= link_to image_tag("logo.png", alt: "かんりぶ"), root_path, id: "logo" %>
 			<nav>
 				<ul class="nav navbar-nav pull-right">
