--- a/app/views/lendings/index.html.erb
+++ b/app/views/lendings/index.html.erb
@@ -63,8 +63,8 @@
 	</table>
 	</form>
 
-
-	<center><%= will_paginate @books %></center>
-
+	<div class="books_pagination">
+		<%= will_paginate @books %>
+	</div>
 
 </div>
