--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,12 +1,12 @@
 <header class="navbar navbar-fixed-top navbar-inverse">
 	<div class="header_menu">
 		<div>
-			<%= link_to image_tag("logo.png", alt: "かんりぶ"), root_path, id: "logo" %>
+			<%= link_to image_tag("logo.png", alt: (t 'app_name')), root_path, id: "logo" %>
 			<nav>
 				<ul class="nav navbar-nav pull-right">
-					<li><%= link_to "蔵書一覧", root_path %></li>
-					<li><%= link_to "貸出処理", '/lendings?job=lending', target: "_blank" %></li>
-					<li><%= link_to "返却処理", '/lendings?job=return', target: "_blank" %></li>
+					<li><%= link_to (t 'books.title.index'), root_path %></li>
+					<li><%= link_to (t 'lending.title.lending'), '/lendings?job=lending', target: "_blank" %></li>
+					<li><%= link_to (t 'lending.title.return'), '/lendings?job=return', target: "_blank" %></li>
 				</ul>
 			</nav>
 		</div>
