--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,9 @@
 			"label_author_name": "<%= I18n.t 'books.label.author_name' %>",
 			"check_min": "<%= I18n.t 'dialog.check_length.min' %>",
 			"check_between": "<%= I18n.t 'dialog.check_length.between' %>",
-			"check_max": "<%= I18n.t 'dialog.check_length.max' %>"
+			"check_max": "<%= I18n.t 'dialog.check_length.max' %>",
+			"update_alert": "<%= I18n.t 'dialog.confirm.data_empty' %>",
+			"update_notice": "<%= I18n.t 'dialog.confirm.book_update' %>"
 		};
 	</script>
   <%= javascript_include_tag 'jquery-2.1.1.min' %>
