--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -7,6 +7,7 @@ html {
 body {
 	padding-top: 70px;
 	min-width: 820px;
+	min-height: 900px;
 }
 
 section {
@@ -130,6 +131,15 @@ input.text-box {
 #search_window {
 	float: right;
 	margin-bottom: 50px;
+}
+
+.search_result {
+	margin-bottom: 20px;
+	background-color: #f0ffff;
+	padding: 10px;
+	a {
+		color: #008990;
+	}
 }
 
 /* table */
